[package]
name = "aurorars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.19.7"

[dependencies]
colored = "2.0.0"
lalrpop-util = {version = "0.19.7", features = ["lexer"]}
regex = "1"
tempfile = "3.4.0"
